--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <!--<h1 style="font-size: 10em;">DERPES OF THE EYE!</h1>-->
 <div id="card">
 <img id="cardImg" />
+<div id="cardBox"></div>
 </div>
 </body>
 </html>
