Worked out way to get around resource loading problems.

--- a/index.html
+++ b/index.html
@@ -46,5 +46,12 @@
 <img id="cardImg" />
 <div id="cardBox"></div>
 </div>
+
+<div id="resource">
+<img src="Graphics/Body/Head/blue_1_128.png" id="head-blue_1_128" />
+<img src="Graphics/Body/Head/red_1_128.png" id="head-red_1_128" />
+<img src="Graphics/Body/Head/green_1_128.png" id="head-green_1_128" />
+<img src="Graphics/Body/Head/yellow_1_128.png" id="head-yellow_1_128" />
+</div>
 </body>
 </html>
