Finally, I can get onto more interesting things.

--- a/index.html
+++ b/index.html
@@ -48,10 +48,16 @@
 </div>
 
 <div id="resource">
+<!--Heads-->
 <img src="Graphics/Body/Head/blue_1_128.png" id="head-blue_1_128" />
 <img src="Graphics/Body/Head/red_1_128.png" id="head-red_1_128" />
 <img src="Graphics/Body/Head/green_1_128.png" id="head-green_1_128" />
 <img src="Graphics/Body/Head/yellow_1_128.png" id="head-yellow_1_128" />
+
+<!--Bodies-->
+<img src="Graphics/Body/Torso/suit.png" id="torso-suit" />
+<img src="Graphics/Body/Torso/dragonBody.png" id="torso-dragonBody" />
+<img src="Graphics/Body/Torso/creeperBody.jpg" id="torso-creeperBody" />
 </div>
 </body>
 </html>
