Added many semantic things. Added a page title, edited iOS metadata, and added the basis for attack and defense strength. Going to add more tomorrow.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
+<title>Elder Cards</title>
 <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<link rel="apple-touch-icon-precomposed" href="Graphics/Body/Head/yellow_1_128.png" />
 <link rel="me" href="https://profiles.google.com/g3n3r0.g3n3ru5/about" />
 <link rel="" href="http://www.davidwalsh.name" />
 <!--<link href='http://fonts.googleapis.com/css?family=Marck+Script&subset=latin,latin-ext' rel='stylesheet' type='text/css'>-->
-<link rel="stylesheet" href="Styles/main.css" />
+<link rel="stylesheet" href="Styles/mobile.css" />
+<link rel="stylesheet" href="Styles/main.css" media="all and (min-device-width: 640px)" />
 <script src="Scripts/EaselJS/lib/easel.js"></script>
 <!--<script src="Scripts/EaselJS/src/easeljs/utils/UID.js"></script>
 <script src="Scripts/EaselJS/src/easeljs/geom/Matrix2D.js"></script>
