Added classes. Experimented with artwork. Added some external functions.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <link href='http://fonts.googleapis.com/css?family=Aldrich|Nova+Square' rel='stylesheet' type='text/css'>
 <script src="Scripts/EaselJS/src/easeljs/ui/Touch.js"></script>
 <!--<script src="Scripts/main.js"></script>-->
+<script src="Scripts/extern_code.js"></script>
 <script src="Scripts/main.js"></script>
 </head>
 <body>
