--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 <img id="playerSide" />
 <div id="buttons">
 <h3 id="vs"></h3>
-<button>Button 1</button><button>Button 2</button><br />
-<button>Button 3</button><button>Button 4</button>
+<button id="fightBtn1">Button 1</button><button id="fightBtn2">Button 2</button><br />
+<button id="fightBtn3">Button 3</button><button id="fightBtn4">Button 4</button>
 </div>
 <img id="enemSide" />
 </div>
