--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 <div id="battleDiv">
 <img id="playerSide" />
 <div id="buttons">
-<h3 id="vs"></h3>
+<h3 id="vs"></h3><br />
+<meter id="playerHealth" min="0" max="100" value="100"></meter><meter id="enemHealth" min="0" max="100" value="100" low="25" high="75" optimum="100"></meter>
 <button id="fightBtn1">Button 1</button><button id="fightBtn2">Button 2</button><br />
 <button id="fightBtn3">Button 3</button><button id="fightBtn4">Button 4</button>
 </div>
