--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--<link href='http://fonts.googleapis.com/css?family=Marck+Script&subset=latin,latin-ext' rel='stylesheet' type='text/css'>-->
 <link rel="stylesheet" href="Styles/mobile.css" />
 <link rel="stylesheet" href="Styles/main.css" media="all and (min-device-width: 640px)" />
-<!--<link rel="alternate stylesheet" href="Styles/3D.css" />-->
+<link rel="alternate stylesheet" href="Styles/3D.css" />
 <!--<style>
 @import url("Styles/mobile.css");
 @import url("Styles/main.css") all and (min-device-width: 640px);
@@ -53,9 +53,9 @@
   <div class="bar7"></div>
   <div class="bar8"></div>-->
 <!--<h1 style="font-size: 10em;">DERPES OF THE EYE!</h1>-->
-<div id="card" class="3d">
+<div id="card">
 <img id="cardImg" class="water" />
-<div id="cardBox"></div>
+<div id="cardBox"></div><div id="atkDef"></div>
 </div>
 
 <div id="battleDiv">
